Fix spacing difference between back link buttons and links

--- a/packages/components/back-link/_back-link.scss
+++ b/packages/components/back-link/_back-link.scss
@@ -20,7 +20,7 @@
   border: 0;
   cursor: pointer;
   display: inline-block;
-  padding-left: 16px; /* 1 */
+  padding: 0 0 0 16px; /* 1 */
   position: relative;
   text-decoration: none;
 
